--- a/home.html
+++ b/home.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Torneio de grupos - UNITED OPEN</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
@@ -62,8 +61,8 @@
                         <li><hr class="dropdown-divider"></li>
                         <p class="text-center">1° Rodada</p>
                         <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="./Jogos/Equipe 1   VS   Equipe 2.html">Equipe 1   VS   Equipe 2</a></li>
-                        <li><a class="dropdown-item" href="./Jogos/Equipe 3   VS   Equipe 4.html">Equipe 3   VS   Equipe 4</a></li>
+                        <li><a class="dropdown-item" href="./Jogos/Equipe 1 VS Equipe 2.html">Equipe 1   VS   Equipe 2</a></li>
+                        <li><a class="dropdown-item" href="./Jogos/Equipe 3 VS Equipe 4.html">Equipe 3   VS   Equipe 4</a></li>
                         <li><a class="dropdown-item" href="#">Equipe 5   VS   Equipe 6</a></li>
                         <li><a class="dropdown-item" href="#">Equipe 7   VS   Equipe 8</a></li>
                         <li><hr class="dropdown-divider"></li>
