trocando todos os espacos nos nomes dos arquivos por '-'

--- a/home.html
+++ b/home.html
@@ -18,7 +18,7 @@
             <div class="card-body">
                 <h5 class="card-title">Carta convite</h5>
                 <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                <a href="./carta convite/Carta convite.html" class="btn btn-primary">Go somewhere</a>
+                <a href="./carta convite/Carta_convite.html" class="btn btn-primary">Go somewhere</a>
             </div>
         </div>
 
@@ -34,8 +34,8 @@
                         Action
                     </button>
                     <ul class="dropdown-menu dropdown-menu-dark dropdown-menu">
-                        <li><a class="dropdown-item" href="./Rodadas/Rodada 1.html">Rodada 1</a></li>
-                        <li><a class="dropdown-item" href="./Rodadas/Rodada 2.html">Rodada 2</a></li>
+                        <li><a class="dropdown-item" href="./Rodadas/Rodada_1.html">Rodada 1</a></li>
+                        <li><a class="dropdown-item" href="./Rodadas/Rodada_2.html">Rodada 2</a></li>
                         <li><a class="dropdown-item" href="#">Rodada 3</a></li>
                         <li><a class="dropdown-item" href="#">Rodada 4</a></li>
                         <li><a class="dropdown-item" href="#">Rodada 5</a></li>
@@ -61,8 +61,8 @@
                         <li><hr class="dropdown-divider"></li>
                         <p class="text-center">1° Rodada</p>
                         <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="./Jogos/Equipe 1 VS Equipe 2.html">Equipe 1   VS   Equipe 2</a></li>
-                        <li><a class="dropdown-item" href="./Jogos/Equipe 3 VS Equipe 4.html">Equipe 3   VS   Equipe 4</a></li>
+                        <li><a class="dropdown-item" href="./Jogos/Equipe_1_VS_Equipe_2.html">Equipe 1   VS   Equipe 2</a></li>
+                        <li><a class="dropdown-item" href="./Jogos/Equipe_3_VS_Equipe_4.html">Equipe 3   VS   Equipe 4</a></li>
                         <li><a class="dropdown-item" href="#">Equipe 5   VS   Equipe 6</a></li>
                         <li><a class="dropdown-item" href="#">Equipe 7   VS   Equipe 8</a></li>
                         <li><hr class="dropdown-divider"></li>
