trocando o espaco por '_' do diretorio 'carta convite' PRA VER SE O VERCEL PARA DE DAR ERRO

--- a/home.html
+++ b/home.html
@@ -18,7 +18,7 @@
             <div class="card-body">
                 <h5 class="card-title">Carta convite</h5>
                 <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                <a href="./carta convite/Carta_convite.html" class="btn btn-primary">Go somewhere</a>
+                <a href="./carta_convite/Carta_convite.html" class="btn btn-primary">Go somewhere</a>
             </div>
         </div>
 
