atualizando para testar a visualizacao no celular

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body id="home">
-    <div class="d-flex flex-column align-items-center justify-content-center m-5 opacity-75">
+    <div class="d-flex flex-column align-items-stretch justify-content-center m-5 opacity-75">
         <div class="card text-center m-3">
             <div class="card-header">
                 UNITED OPEN
@@ -52,7 +52,7 @@
             </div>
             <div class="card-body">
                 <h5 class="card-title">Jogos</h5>
-                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                <p class="card-text">.</p>
                 <div class="btn-group">
                     <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
                         Action
@@ -118,7 +118,7 @@
             </div>
             <div class="card-body">
                 <h5 class="card-title">Classificação</h5>
-                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                <p class="card-text">Fique por dentro da classificação geral de equipes.</p>
                 <a href="./classificacao/Resumo.html" class="btn btn-primary">Go somewhere</a>
             </div>
         </div>
