adicionando descricao a pagina inicial

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </div>
             <div class="card-body">
                 <h5 class="card-title">Carta convite</h5>
-                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                <p class="card-text">Confira em detalhes mais informações sobre o torneio e regulamento.</p>
                 <a href="./carta convite/Carta convite.html" class="btn btn-primary">Go somewhere</a>
             </div>
         </div>
@@ -28,7 +28,7 @@
             </div>
             <div class="card-body">
                 <h5 class="card-title">Rodadas</h5>
-                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                <p class="card-text">Acompanhe o resultado final dos confrontos entre as equipes.</p>
                 <div class="btn-group">
                     <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
                         Action
@@ -52,7 +52,7 @@
             </div>
             <div class="card-body">
                 <h5 class="card-title">Jogos</h5>
-                <p class="card-text">.</p>
+                <p class="card-text">Tenha acesso ao placar, data e horário de cada jogo.</p>
                 <div class="btn-group">
                     <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
                         Action
