--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="card-body">
                 <h5 class="card-title">Carta convite</h5>
                 <p class="card-text">Confira em detalhes mais informações sobre o torneio e regulamento.</p>
-                <a href="./carta convite/Carta convite.html" class="btn btn-primary">Go somewhere</a>
+                <a href="./carta convite/Carta convite.html" class="btn btn-primary">Mais informações</a>
             </div>
         </div>
 
@@ -31,16 +31,16 @@
                 <p class="card-text">Acompanhe o resultado final dos confrontos entre as equipes.</p>
                 <div class="btn-group">
                     <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                        Action
+                        Ver rodadas
                     </button>
                     <ul class="dropdown-menu dropdown-menu-dark dropdown-menu">
-                        <li><a class="dropdown-item" href="./Rodadas/Rodada 1.html">Rodada 1</a></li>
-                        <li><a class="dropdown-item" href="./Rodadas/Rodada 2.html">Rodada 2</a></li>
-                        <li><a class="dropdown-item" href="#">Rodada 3</a></li>
-                        <li><a class="dropdown-item" href="#">Rodada 4</a></li>
-                        <li><a class="dropdown-item" href="#">Rodada 5</a></li>
-                        <li><a class="dropdown-item" href="#">Rodada 6</a></li>
-                        <li><a class="dropdown-item" href="#">Rodada 7</a></li>
+                        <li><a class="dropdown-item text-center" href="./Rodadas/Rodada 1.html">Rodada 1</a></li>
+                        <li><a class="dropdown-item text-center" href="./Rodadas/Rodada 2.html">Rodada 2</a></li>
+                        <li><a class="dropdown-item text-center" href="#">Rodada 3</a></li>
+                        <li><a class="dropdown-item text-center" href="#">Rodada 4</a></li>
+                        <li><a class="dropdown-item text-center" href="#">Rodada 5</a></li>
+                        <li><a class="dropdown-item text-center" href="#">Rodada 6</a></li>
+                        <li><a class="dropdown-item text-center" href="#">Rodada 7</a></li>
                     </ul>
                 </div>
             </div>
@@ -55,58 +55,58 @@
                 <p class="card-text">Tenha acesso ao placar, data e horário de cada jogo.</p>
                 <div class="btn-group">
                     <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                        Action
+                        Ver jogos
                     </button>
                     <ul class="dropdown-menu dropdown-menu-dark dropdown-menu">
                         <li><hr class="dropdown-divider"></li>
                         <p class="text-center">1° Rodada</p>
                         <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="./Jogos/Equipe 1 VS Equipe 2.html">Equipe 1   VS   Equipe 2</a></li>
-                        <li><a class="dropdown-item" href="./Jogos/Equipe 3 VS Equipe 4.html">Equipe 3   VS   Equipe 4</a></li>
-                        <li><a class="dropdown-item" href="#">Equipe 5   VS   Equipe 6</a></li>
-                        <li><a class="dropdown-item" href="#">Equipe 7   VS   Equipe 8</a></li>
+                        <li><a class="dropdown-item text-center" href="./Jogos/Equipe 1 VS Equipe 2.html">Equipe 1   VS   Equipe 2</a></li>
+                        <li><a class="dropdown-item text-center" href="./Jogos/Equipe 3 VS Equipe 4.html">Equipe 3   VS   Equipe 4</a></li>
+                        <li><a class="dropdown-item text-center" href="#">Equipe 5   VS   Equipe 6</a></li>
+                        <li><a class="dropdown-item text-center" href="#">Equipe 7   VS   Equipe 8</a></li>
                         <li><hr class="dropdown-divider"></li>
                         <p class="text-center">2° Rodada</p>
                         <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="#">Equipe 1   VS   Equipe 2</a></li>
-                        <li><a class="dropdown-item" href="#">Equipe 3   VS   Equipe 4</a></li>
-                        <li><a class="dropdown-item" href="#">Equipe 5   VS   Equipe 6</a></li>
-                        <li><a class="dropdown-item" href="#">Equipe 7   VS   Equipe 8</a></li>
+                        <li><a class="dropdown-item text-center" href="#">Equipe 1   VS   Equipe 2</a></li>
+                        <li><a class="dropdown-item text-center" href="#">Equipe 3   VS   Equipe 4</a></li>
+                        <li><a class="dropdown-item text-center" href="#">Equipe 5   VS   Equipe 6</a></li>
+                        <li><a class="dropdown-item text-center" href="#">Equipe 7   VS   Equipe 8</a></li>
                         <li><hr class="dropdown-divider"></li>
                         <p class="text-center">3° Rodada</p>
                         <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="#">Equipe 1   VS   Equipe 2</a></li>
-                        <li><a class="dropdown-item" href="#">Equipe 3   VS   Equipe 4</a></li>
-                        <li><a class="dropdown-item" href="#">Equipe 5   VS   Equipe 6</a></li>
-                        <li><a class="dropdown-item" href="#">Equipe 7   VS   Equipe 8</a></li>
+                        <li><a class="dropdown-item text-center" href="#">Equipe 1   VS   Equipe 2</a></li>
+                        <li><a class="dropdown-item text-center" href="#">Equipe 3   VS   Equipe 4</a></li>
+                        <li><a class="dropdown-item text-center" href="#">Equipe 5   VS   Equipe 6</a></li>
+                        <li><a class="dropdown-item text-center" href="#">Equipe 7   VS   Equipe 8</a></li>
                         <li><hr class="dropdown-divider"></li>
                         <p class="text-center">4° Rodada</p>
                         <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="#">Equipe 1   VS   Equipe 2</a></li>
-                        <li><a class="dropdown-item" href="#">Equipe 3   VS   Equipe 4</a></li>
-                        <li><a class="dropdown-item" href="#">Equipe 5   VS   Equipe 6</a></li>
-                        <li><a class="dropdown-item" href="#">Equipe 7   VS   Equipe 8</a></li>
+                        <li><a class="dropdown-item text-center" href="#">Equipe 1   VS   Equipe 2</a></li>
+                        <li><a class="dropdown-item text-center" href="#">Equipe 3   VS   Equipe 4</a></li>
+                        <li><a class="dropdown-item text-center" href="#">Equipe 5   VS   Equipe 6</a></li>
+                        <li><a class="dropdown-item text-center" href="#">Equipe 7   VS   Equipe 8</a></li>
                         <li><hr class="dropdown-divider"></li>
                         <p class="text-center">5° Rodada</p>
                         <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="#">Equipe 1   VS   Equipe 2</a></li>
-                        <li><a class="dropdown-item" href="#">Equipe 3   VS   Equipe 4</a></li>
-                        <li><a class="dropdown-item" href="#">Equipe 5   VS   Equipe 6</a></li>
-                        <li><a class="dropdown-item" href="#">Equipe 7   VS   Equipe 8</a></li>
+                        <li><a class="dropdown-item text-center" href="#">Equipe 1   VS   Equipe 2</a></li>
+                        <li><a class="dropdown-item text-center" href="#">Equipe 3   VS   Equipe 4</a></li>
+                        <li><a class="dropdown-item text-center" href="#">Equipe 5   VS   Equipe 6</a></li>
+                        <li><a class="dropdown-item text-center" href="#">Equipe 7   VS   Equipe 8</a></li>
                         <li><hr class="dropdown-divider"></li>
                         <p class="text-center">6° Rodada</p>
                         <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="#">Equipe 1   VS   Equipe 2</a></li>
-                        <li><a class="dropdown-item" href="#">Equipe 3   VS   Equipe 4</a></li>
-                        <li><a class="dropdown-item" href="#">Equipe 5   VS   Equipe 6</a></li>
-                        <li><a class="dropdown-item" href="#">Equipe 7   VS   Equipe 8</a></li>
+                        <li><a class="dropdown-item text-center" href="#">Equipe 1   VS   Equipe 2</a></li>
+                        <li><a class="dropdown-item text-center" href="#">Equipe 3   VS   Equipe 4</a></li>
+                        <li><a class="dropdown-item text-center" href="#">Equipe 5   VS   Equipe 6</a></li>
+                        <li><a class="dropdown-item text-center" href="#">Equipe 7   VS   Equipe 8</a></li>
                         <li><hr class="dropdown-divider"></li>
                         <p class="text-center">7° Rodada</p>
                         <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="#">Equipe 1   VS   Equipe 2</a></li>
-                        <li><a class="dropdown-item" href="#">Equipe 3   VS   Equipe 4</a></li>
-                        <li><a class="dropdown-item" href="#">Equipe 5   VS   Equipe 6</a></li>
-                        <li><a class="dropdown-item" href="#">Equipe 7   VS   Equipe 8</a></li>
+                        <li><a class="dropdown-item text-center" href="#">Equipe 1   VS   Equipe 2</a></li>
+                        <li><a class="dropdown-item text-center" href="#">Equipe 3   VS   Equipe 4</a></li>
+                        <li><a class="dropdown-item text-center" href="#">Equipe 5   VS   Equipe 6</a></li>
+                        <li><a class="dropdown-item text-center" href="#">Equipe 7   VS   Equipe 8</a></li>
                     </ul>
                 </div>
             </div>
@@ -119,7 +119,7 @@
             <div class="card-body">
                 <h5 class="card-title">Classificação</h5>
                 <p class="card-text">Fique por dentro da classificação geral de equipes.</p>
-                <a href="./classificacao/Resumo.html" class="btn btn-primary">Go somewhere</a>
+                <a href="./classificacao/Resumo.html" class="btn btn-primary">Ver classificação</a>
             </div>
         </div>
     </div>
