--- a/classificacao/Resumo.html
+++ b/classificacao/Resumo.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Classificação - UNITED OPEN</title>
+    <meta property="og:image" content="https://raw.githubusercontent.com/elguesabal/UNITED-OPEN/main/src/tumblr.png" />
+    <link rel="icon" href="../src/favicon_logo.png" type="image/png">
     <link rel="stylesheet" href="../css/style.css">
 
 </head>
