--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Torneio de grupos - UNITED OPEN</title>
     <meta property="og:image" content="https://raw.githubusercontent.com/elguesabal/UNITED-OPEN/main/src/tumblr.png" />
     <link rel="icon" href="./src/favicon_logo.png" type="image/png">
-    <title>Torneio de grupos - UNITED OPEN</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
 </head>
@@ -109,6 +109,31 @@
                         <li><a class="dropdown-item text-center" href="#">Equipe 3   VS   Equipe 4</a></li>
                         <li><a class="dropdown-item text-center" href="#">Equipe 5   VS   Equipe 6</a></li>
                         <li><a class="dropdown-item text-center" href="#">Equipe 7   VS   Equipe 8</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+        <div class="card text-center m-3">
+            <div class="card-header">
+                UNITED OPEN
+            </div>
+            <div class="card-body">
+                <h5 class="card-title">Equipes</h5>
+                <p class="card-text">Veja uma breve apresentação da equipe e seus atletas.</p>
+                <div class="btn-group">
+                    <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                        Ver equipes
+                    </button>
+                    <ul class="dropdown-menu dropdown-menu-dark dropdown-menu">
+                        <li><a class="dropdown-item text-center" href="./Equipes/PEACE.html">PEACE</a></li>
+                        <li><a class="dropdown-item text-center" href="./Equipes/EL JACK.html">EL JACK</a></li>
+                        <li><a class="dropdown-item text-center" href="./Equipes/ÁGUIAS.html">ÁGUIAS</a></li>
+                        <li><a class="dropdown-item text-center" href="./Equipes/CAPIVARAS.html">CAPIVARAS</a></li>
+                        <li><a class="dropdown-item text-center" href="./Equipes/TITÃS.html">TITÃS</a></li>
+                        <li><a class="dropdown-item text-center" href="./Equipes/URSUS.html">URSUS</a></li>
+                        <li><a class="dropdown-item text-center" href="./Equipes/FADA.html">FADA</a></li>
+                        <li><a class="dropdown-item text-center" href="./Equipes/GRINGOS.html">GRINGOS</a></li>
                     </ul>
                 </div>
             </div>
