enviando para teste

--- a/Equipes/AGUIAS.html
+++ b/Equipes/AGUIAS.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ÁGUIAS - UNITED OPEN</title>
-    <meta property="og:image" href="../src/ÁGUIAS.jpg" />
+    <meta property="og:image" content="https://raw.githubusercontent.com/elguesabal/UNITED-OPEN/main/src/AGUIAStumblr.png" />
     <link rel="icon" href="../src/favicon_logo.png" type="image/png">
     <link rel="stylesheet" href="../css/style.css">
 </head>
