--- a/Equipes/EL_JACK.html
+++ b/Equipes/EL_JACK.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FADA - UNITED OPEN</title>
-    <meta property="og:image" content="https://raw.githubusercontent.com/elguesabal/UNITED-OPEN/main/src/FADA.jpg" />
+    <title>EL JACK - UNITED OPEN</title>
+    <meta property="og:image" content="https://raw.githubusercontent.com/elguesabal/UNITED-OPEN/main/src/EL%20JACK.jpg" />
     <link rel="icon" href="../src/favicon_logo.png" type="image/png">
     <link rel="stylesheet" href="../css/style.css">
 </head>
