--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                     </button>
                     <ul class="dropdown-menu dropdown-menu-dark dropdown-menu">
                         <li><a class="dropdown-item text-center" href="./Equipes/PEACE.html">PEACE</a></li>
-                        <li><a class="dropdown-item text-center" href="./Equipes/EL JACK.html">EL JACK</a></li>
+                        <li><a class="dropdown-item text-center" href="./Equipes/EL_JACK.html">EL JACK</a></li>
                         <li><a class="dropdown-item text-center" href="./Equipes/ÁGUIAS.html">AGUIAS</a></li>
                         <li><a class="dropdown-item text-center" href="./Equipes/CAPIVARAS.html">CAPIVARAS</a></li>
                         <li><a class="dropdown-item text-center" href="./Equipes/TITÃS.html">TITAS</a></li>
