pagina AGUIAS e TITAS estavam linkado errado

--- a/index.html
+++ b/index.html
@@ -128,9 +128,9 @@
                     <ul class="dropdown-menu dropdown-menu-dark dropdown-menu">
                         <li><a class="dropdown-item text-center" href="./Equipes/PEACE.html">PEACE</a></li>
                         <li><a class="dropdown-item text-center" href="./Equipes/EL_JACK.html">EL JACK</a></li>
-                        <li><a class="dropdown-item text-center" href="./Equipes/ÁGUIAS.html">AGUIAS</a></li>
+                        <li><a class="dropdown-item text-center" href="./Equipes/AGUIAS.html">AGUIAS</a></li>
                         <li><a class="dropdown-item text-center" href="./Equipes/CAPIVARAS.html">CAPIVARAS</a></li>
-                        <li><a class="dropdown-item text-center" href="./Equipes/TITÃS.html">TITAS</a></li>
+                        <li><a class="dropdown-item text-center" href="./Equipes/TITAS.html">TITAS</a></li>
                         <li><a class="dropdown-item text-center" href="./Equipes/URSUS.html">URSUS</a></li>
                         <li><a class="dropdown-item text-center" href="./Equipes/FADA.html">FADA</a></li>
                         <li><a class="dropdown-item text-center" href="./Equipes/GRINGOS.html">GRINGOS</a></li>
