--- a/Equipes/CAPIVARAS.html
+++ b/Equipes/CAPIVARAS.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <iframe loading="lazy" class="iframe" src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFzDu3Ucfs&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen"></iframe>
+    <iframe loading="lazy" class="iframe" src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFzDmpckAA&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen"></iframe>
 </body>
 
 </html>
