retirando o botao site

--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                     <p class="card-text">Entre em contato para conhecer nossas unidades e agendar uma aula experimental!</p>
                     <div class="d-flex justify-content-center btn-group" role="group" aria-label="Basic outlined example">
                         <a class="btn btn-outline-dark mx-2" href="https://www.instagram.com/badminton_badbons">Instagram</a>
-                        <a class="btn btn-outline-dark mx-2" href="https://badbons.com.br">Site</a>
+                        <!-- <a class="btn btn-outline-dark mx-2" href="https://badbons.com.br">Site</a> -->
                         <a class="btn btn-outline-dark mx-2" href="https://wa.me/5521979789754?text=Ol%C3%A1%2C+conheci+a+Badbons+pelo+torneio+UNITED+OPEN%21+%28Cada+vez+que+alguem+clicar+neste+link+o+Alexandre+vai+mandar+mil+reais+no+pix+para+o+Jos%C3%A9%29">Whatsapp</a>
                     </div>
                 </div>
@@ -249,7 +249,7 @@
                     <p class="card-text">This is a short card.</p>
                     <div class="d-flex justify-content-center btn-group" role="group" aria-label="Basic outlined example">
                         <a class="btn btn-outline-dark mx-2" href="#">Instagram</a>
-                        <a class="btn btn-outline-dark mx-2" href="#">Site</a>
+                        <!-- <a class="btn btn-outline-dark mx-2" href="#">Site</a> -->
                         <a class="btn btn-outline-dark mx-2" href="#">Whatsapp</a>
                     </div>
                 </div>
@@ -263,7 +263,7 @@
                     <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
                     <div class="d-flex justify-content-center btn-group" role="group" aria-label="Basic outlined example">
                         <a class="btn btn-outline-dark mx-2" href="#">Instagram</a>
-                        <a class="btn btn-outline-dark mx-2" href="#">Site</a>
+                        <!-- <a class="btn btn-outline-dark mx-2" href="#">Site</a> -->
                         <a class="btn btn-outline-dark mx-2" href="#">Whatsapp</a>
                     </div>
                 </div>
@@ -277,7 +277,7 @@
                     <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                     <div class="d-flex justify-content-center btn-group" role="group" aria-label="Basic outlined example">
                         <a class="btn btn-outline-dark mx-2" href="#">Instagram</a>
-                        <a class="btn btn-outline-dark mx-2" href="#">Site</a>
+                        <!-- <a class="btn btn-outline-dark mx-2" href="#">Site</a> -->
                         <a class="btn btn-outline-dark mx-2" href="#">Whatsapp</a>
                     </div>
                 </div>
