--- a/index.html
+++ b/index.html
@@ -199,8 +199,8 @@
             <div class="card h-100">
                 <img src="./src/boutique.jpg" class="card-img-top" alt="Imagem do patrocinador">
                 <div class="card-body">
-                    <h5 class="card-title">Boutique</h5>
-                    <p class="card-text">Moda feminina casual.</p>
+                    <h5 class="card-title">Moda feminina casual</h5>
+                    <p class="card-text">manequim do 34 ao 52.</p>
                     <div class="d-flex justify-content-center btn-group" role="group" aria-label="Basic outlined example">
                         <a class="btn btn-outline-dark mx-2" href="https://instagram.com/boutiquetowncf?igshid=MmVlMjlkMTBhMg==">Instagram</a>
                     </div>
