--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Torneio de grupos - UNITED OPEN</title>
     <meta name="description" content="UNITED OPEN torneio de badminton entre equipes!">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="https://raw.githubusercontent.com/elguesabal/UNITED-OPEN/main/src/logo.png" />
+    <meta property="og:image" content="https://raw.githubusercontent.com/elguesabal/UNITED-OPEN/main/src/tumblr_logo.jpg" />
     <link rel="icon" href="./src/favicon_logo.png" type="image/png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
