--- a/Jogos/Equipe 1 VS Equipe 2.html
+++ b/Jogos/Equipe 1 VS Equipe 2.html
@@ -7,11 +7,28 @@
     <title>Equipe 1 VS Equipe 2 - UNITED OPEN</title>
     <meta property="og:image" content="https://raw.githubusercontent.com/elguesabal/UNITED-OPEN/main/src/tumblr.png" />
     <link rel="icon" href="../src/favicon_logo.png" type="image/png">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
+    <div class="position-absolute w-100" id="anuncio">
+        <div class="collapse collapse-horizontal" id="collapseWidthExample">
+            <div class="card card-body">
+                <div class="d-flex justify-content-end">
+                    <button type="button" class="btn-close" data-bs-toggle="collapse" data-bs-target="#collapseWidthExample"></button>
+                </div>
+                <div class="row row-cols-1 row-cols-md-3 g-4 m-2 opacity-75 d-flex justify-content-evenly" id="ad">
+                    <!-- AKI ENTRA OS ANUNCIOS -->
+                </div>
+            </div>
+        </div>
+    </div>
     <iframe loading="lazy" class="iframe" src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFyZJ-6E_M&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen"></iframe>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="../js/ad_button.js"></script>
+    <script type="module" src="../js/ad_pages.js"></script>
 </body>
 
 </html>
