retirando o anuncio de venha ser patrocinador e adicionado paginas de outras rodadass

--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
                     <ul class="dropdown-menu dropdown-menu-dark dropdown-menu">
                         <li><a class="dropdown-item text-center" href="./Rodadas/Rodada 1.html">Rodada 1</a></li>
                         <li><a class="dropdown-item text-center" href="./Rodadas/Rodada 2.html">Rodada 2</a></li>
-                        <li><a class="dropdown-item text-center" href="#">Rodada 3</a></li>
-                        <li><a class="dropdown-item text-center" href="#">Rodada 4</a></li>
-                        <li><a class="dropdown-item text-center" href="#">Rodada 5</a></li>
-                        <li><a class="dropdown-item text-center" href="#">Rodada 6</a></li>
-                        <li><a class="dropdown-item text-center" href="#">Rodada 7</a></li>
+                        <li><a class="dropdown-item text-center" href="./Rodadas/Rodada 3.html">Rodada 3</a></li>
+                        <li><a class="dropdown-item text-center" href="./Rodadas/Rodada 4.html">Rodada 4</a></li>
+                        <li><a class="dropdown-item text-center" href="./Rodadas/Rodada 5.html">Rodada 5</a></li>
+                        <li><a class="dropdown-item text-center" href="./Rodadas/Rodada 6.html">Rodada 6</a></li>
+                        <li><a class="dropdown-item text-center" href="./Rodadas/Rodada 7.html">Rodada 7</a></li>
                     </ul>
                 </div>
             </div>
