primeira rodada concluida

--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
                         <li>
                             <hr class="dropdown-divider">
                         </li>
-                        <li><a class="dropdown-item text-center" href="./Jogos/Equipe 1 VS Equipe 2.html">Equipe 1 VS Equipe 2</a></li>
-                        <li><a class="dropdown-item text-center" href="./Jogos/Equipe 3 VS Equipe 4.html">Equipe 3 VS Equipe 4</a></li>
-                        <li><a class="dropdown-item text-center" href="#">Equipe 5 VS Equipe 6</a></li>
-                        <li><a class="dropdown-item text-center" href="#">Equipe 7 VS Equipe 8</a></li>
+                        <li><a class="dropdown-item text-center" href="./Jogos/1°Rodada/PEACE vs TITAS.html">PEACE vs TITAS</a></li>
+                        <li><a class="dropdown-item text-center" href="./Jogos/1°Rodada/EL JACK vs URSUS.html">EL JACK vs URSUS</a></li>
+                        <li><a class="dropdown-item text-center" href="./Jogos/1°Rodada/AGUIAS vs FADA.html">ÁGUIAS vs FADA</a></li>
+                        <li><a class="dropdown-item text-center" href="./Jogos/1°Rodada/CAPIVARAS vs GRINGOS.html">CAPIVARAS vs GRINGOS</a></li>
                         <li>
                             <hr class="dropdown-divider">
                         </li>
