--- a/index.html
+++ b/index.html
@@ -94,10 +94,10 @@
                         <li>
                             <hr class="dropdown-divider">
                         </li>
-                        <li><a class="dropdown-item text-center" href="#">Equipe 1 VS Equipe 2</a></li>
-                        <li><a class="dropdown-item text-center" href="#">Equipe 3 VS Equipe 4</a></li>
-                        <li><a class="dropdown-item text-center" href="#">Equipe 5 VS Equipe 6</a></li>
-                        <li><a class="dropdown-item text-center" href="#">Equipe 7 VS Equipe 8</a></li>
+                        <li><a class="dropdown-item text-center" href="./Jogos/2°Rodada/URSUS vs PEACE.html">URSUS vs PEACE</a></li>
+                        <li><a class="dropdown-item text-center" href="./Jogos/2°Rodada/FADA vs EL JACK.html">FADA vs EL JACK</a></li>
+                        <li><a class="dropdown-item text-center" href="./Jogos/2°Rodada/GRINGOS vs AGUIAS.html">GRINGOS vs AGUIAS</a></li>
+                        <li><a class="dropdown-item text-center" href="./Jogos/2°Rodada/TITAS vs CAPIVARAS.html">TITAS vs CAPIVARAS</a></li>
                         <li>
                             <hr class="dropdown-divider">
                         </li>
