--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                         <li>
                             <hr class="dropdown-divider">
                         </li>
-                        <li><a class="dropdown-item text-center" href="./Jogos/1°Rodada/PEACE vs TITAS.html">PEACE vs TITAS</a></li>
+                        <li><a class="dropdown-item text-center" href="./Jogos/1°Rodada/PEACE vs TITAS.html">PEACE vs TITÃS</a></li>
                         <li><a class="dropdown-item text-center" href="./Jogos/1°Rodada/EL JACK vs URSUS.html">EL JACK vs URSUS</a></li>
                         <li><a class="dropdown-item text-center" href="./Jogos/1°Rodada/AGUIAS vs FADA.html">ÁGUIAS vs FADA</a></li>
                         <li><a class="dropdown-item text-center" href="./Jogos/1°Rodada/CAPIVARAS vs GRINGOS.html">CAPIVARAS vs GRINGOS</a></li>
@@ -96,8 +96,8 @@
                         </li>
                         <li><a class="dropdown-item text-center" href="./Jogos/2°Rodada/URSUS vs PEACE.html">URSUS vs PEACE</a></li>
                         <li><a class="dropdown-item text-center" href="./Jogos/2°Rodada/FADA vs EL JACK.html">FADA vs EL JACK</a></li>
-                        <li><a class="dropdown-item text-center" href="./Jogos/2°Rodada/GRINGOS vs AGUIAS.html">GRINGOS vs AGUIAS</a></li>
-                        <li><a class="dropdown-item text-center" href="./Jogos/2°Rodada/TITAS vs CAPIVARAS.html">TITAS vs CAPIVARAS</a></li>
+                        <li><a class="dropdown-item text-center" href="./Jogos/2°Rodada/GRINGOS vs AGUIAS.html">GRINGOS vs ÁGUIAS</a></li>
+                        <li><a class="dropdown-item text-center" href="./Jogos/2°Rodada/TITAS vs CAPIVARAS.html">TITÃS vs CAPIVARAS</a></li>
                         <li>
                             <hr class="dropdown-divider">
                         </li>
@@ -105,10 +105,10 @@
                         <li>
                             <hr class="dropdown-divider">
                         </li>
-                        <li><a class="dropdown-item text-center" href="#">Equipe 1 VS Equipe 2</a></li>
-                        <li><a class="dropdown-item text-center" href="#">Equipe 3 VS Equipe 4</a></li>
-                        <li><a class="dropdown-item text-center" href="#">Equipe 5 VS Equipe 6</a></li>
-                        <li><a class="dropdown-item text-center" href="#">Equipe 7 VS Equipe 8</a></li>
+                        <li><a class="dropdown-item text-center" href="./Jogos/3°Rodada/PEACE vs FADA.html">PEACE vs FADA</a></li>
+                        <li><a class="dropdown-item text-center" href="./Jogos/3°Rodada/EL JACK vs GRINGOS.html">EL JACK vs GRINGOS</a></li>
+                        <li><a class="dropdown-item text-center" href="./Jogos/3°Rodada/AGUIAS vs TITAS.html">ÁGUIAS vs TITÃS</a></li>
+                        <li><a class="dropdown-item text-center" href="./Jogos/3°Rodada/CAPIVARAS vs URSUS.html">CAPIVARAS vs URSUS</a></li>
                         <li>
                             <hr class="dropdown-divider">
                         </li>
@@ -116,10 +116,10 @@
                         <li>
                             <hr class="dropdown-divider">
                         </li>
-                        <li><a class="dropdown-item text-center" href="#">Equipe 1 VS Equipe 2</a></li>
-                        <li><a class="dropdown-item text-center" href="#">Equipe 3 VS Equipe 4</a></li>
-                        <li><a class="dropdown-item text-center" href="#">Equipe 5 VS Equipe 6</a></li>
-                        <li><a class="dropdown-item text-center" href="#">Equipe 7 VS Equipe 8</a></li>
+                        <li><a class="dropdown-item text-center" href="./Jogos/4°Rodada/GRINGOS vs PEACE.html">GRINGOS vs PEACE</a></li>
+                        <li><a class="dropdown-item text-center" href="./Jogos/4°Rodada/TITÃS vs EL JACK.html">TITÃS vs EL JACK</a></li>
+                        <li><a class="dropdown-item text-center" href="./Jogos/4°Rodada/URSUS vs ÁGUIAS.html">URSUS vs ÁGUIAS</a></li>
+                        <li><a class="dropdown-item text-center" href="./Jogos/4°Rodada/FADA vs CAPIVARAS.html">FADA vs CAPIVARAS</a></li>
                         <li>
                             <hr class="dropdown-divider">
                         </li>
@@ -127,10 +127,10 @@
                         <li>
                             <hr class="dropdown-divider">
                         </li>
-                        <li><a class="dropdown-item text-center" href="#">Equipe 1 VS Equipe 2</a></li>
-                        <li><a class="dropdown-item text-center" href="#">Equipe 3 VS Equipe 4</a></li>
-                        <li><a class="dropdown-item text-center" href="#">Equipe 5 VS Equipe 6</a></li>
-                        <li><a class="dropdown-item text-center" href="#">Equipe 7 VS Equipe 8</a></li>
+                        <li><a class="dropdown-item text-center" href="#">PEACE vs EL JACK</a></li>
+                        <li><a class="dropdown-item text-center" href="#">ÁGUIAS vs CAPIVARAS</a></li>
+                        <li><a class="dropdown-item text-center" href="#">TITÃS vs URSUS</a></li>
+                        <li><a class="dropdown-item text-center" href="#">FADA vs GRINGOS</a></li>
                         <li>
                             <hr class="dropdown-divider">
                         </li>
@@ -138,10 +138,10 @@
                         <li>
                             <hr class="dropdown-divider">
                         </li>
-                        <li><a class="dropdown-item text-center" href="#">Equipe 1 VS Equipe 2</a></li>
-                        <li><a class="dropdown-item text-center" href="#">Equipe 3 VS Equipe 4</a></li>
-                        <li><a class="dropdown-item text-center" href="#">Equipe 5 VS Equipe 6</a></li>
-                        <li><a class="dropdown-item text-center" href="#">Equipe 7 VS Equipe 8</a></li>
+                        <li><a class="dropdown-item text-center" href="#">ÁGUIAS vs PEACE</a></li>
+                        <li><a class="dropdown-item text-center" href="#">CAPIVARAS vs EL JACK</a></li>
+                        <li><a class="dropdown-item text-center" href="#">FADA vs TITÃS</a></li>
+                        <li><a class="dropdown-item text-center" href="#">GRINGOS vs URSUS</a></li>
                         <li>
                             <hr class="dropdown-divider">
                         </li>
@@ -149,10 +149,10 @@
                         <li>
                             <hr class="dropdown-divider">
                         </li>
-                        <li><a class="dropdown-item text-center" href="#">Equipe 1 VS Equipe 2</a></li>
-                        <li><a class="dropdown-item text-center" href="#">Equipe 3 VS Equipe 4</a></li>
-                        <li><a class="dropdown-item text-center" href="#">Equipe 5 VS Equipe 6</a></li>
-                        <li><a class="dropdown-item text-center" href="#">Equipe 7 VS Equipe 8</a></li>
+                        <li><a class="dropdown-item text-center" href="#">PEACE vs CAPIVARAS</a></li>
+                        <li><a class="dropdown-item text-center" href="#">EL JACK vs ÁGUIAS</a></li>
+                        <li><a class="dropdown-item text-center" href="#">TITÃS vs GRINGOS</a></li>
+                        <li><a class="dropdown-item text-center" href="#">URSUS vs FADA</a></li>
                     </ul>
                 </div>
             </div>
