terminando de por as tabelas de jogos

--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
                             <hr class="dropdown-divider">
                         </li>
                         <li><a class="dropdown-item text-center" href="./Jogos/4°Rodada/GRINGOS vs PEACE.html">GRINGOS vs PEACE</a></li>
-                        <li><a class="dropdown-item text-center" href="./Jogos/4°Rodada/TITÃS vs EL JACK.html">TITÃS vs EL JACK</a></li>
-                        <li><a class="dropdown-item text-center" href="./Jogos/4°Rodada/URSUS vs ÁGUIAS.html">URSUS vs ÁGUIAS</a></li>
+                        <li><a class="dropdown-item text-center" href="./Jogos/4°Rodada/TITAS vs EL JACK.html">TITÃS vs EL JACK</a></li>
+                        <li><a class="dropdown-item text-center" href="./Jogos/4°Rodada/URSUS vs AGUIAS.html">URSUS vs ÁGUIAS</a></li>
                         <li><a class="dropdown-item text-center" href="./Jogos/4°Rodada/FADA vs CAPIVARAS.html">FADA vs CAPIVARAS</a></li>
                         <li>
                             <hr class="dropdown-divider">
@@ -127,10 +127,10 @@
                         <li>
                             <hr class="dropdown-divider">
                         </li>
-                        <li><a class="dropdown-item text-center" href="#">PEACE vs EL JACK</a></li>
-                        <li><a class="dropdown-item text-center" href="#">ÁGUIAS vs CAPIVARAS</a></li>
-                        <li><a class="dropdown-item text-center" href="#">TITÃS vs URSUS</a></li>
-                        <li><a class="dropdown-item text-center" href="#">FADA vs GRINGOS</a></li>
+                        <li><a class="dropdown-item text-center" href="./Jogos/5°Rodada/PEACE vs EL JACK.html">PEACE vs EL JACK</a></li>
+                        <li><a class="dropdown-item text-center" href="./Jogos/5°Rodada/AGUIAS vs CAPIVARAS.html">ÁGUIAS vs CAPIVARAS</a></li>
+                        <li><a class="dropdown-item text-center" href="./Jogos/5°Rodada/TITAS vs URSUS.html">TITÃS vs URSUS</a></li>
+                        <li><a class="dropdown-item text-center" href="./Jogos/5°Rodada/FADA vs GRINGOS.html">FADA vs GRINGOS</a></li>
                         <li>
                             <hr class="dropdown-divider">
                         </li>
@@ -138,10 +138,10 @@
                         <li>
                             <hr class="dropdown-divider">
                         </li>
-                        <li><a class="dropdown-item text-center" href="#">ÁGUIAS vs PEACE</a></li>
-                        <li><a class="dropdown-item text-center" href="#">CAPIVARAS vs EL JACK</a></li>
-                        <li><a class="dropdown-item text-center" href="#">FADA vs TITÃS</a></li>
-                        <li><a class="dropdown-item text-center" href="#">GRINGOS vs URSUS</a></li>
+                        <li><a class="dropdown-item text-center" href="./Jogos/6°Rodada/AGUIAS vs PEACE.html">ÁGUIAS vs PEACE</a></li>
+                        <li><a class="dropdown-item text-center" href="./Jogos/6°Rodada/CAPIVARAS vs EL JACK.html">CAPIVARAS vs EL JACK</a></li>
+                        <li><a class="dropdown-item text-center" href="./Jogos/6°Rodada/FADA vs TITAS.html">FADA vs TITÃS</a></li>
+                        <li><a class="dropdown-item text-center" href="./Jogos/6°Rodada/GRINGOS vs URSUS.html">GRINGOS vs URSUS</a></li>
                         <li>
                             <hr class="dropdown-divider">
                         </li>
@@ -149,10 +149,10 @@
                         <li>
                             <hr class="dropdown-divider">
                         </li>
-                        <li><a class="dropdown-item text-center" href="#">PEACE vs CAPIVARAS</a></li>
-                        <li><a class="dropdown-item text-center" href="#">EL JACK vs ÁGUIAS</a></li>
-                        <li><a class="dropdown-item text-center" href="#">TITÃS vs GRINGOS</a></li>
-                        <li><a class="dropdown-item text-center" href="#">URSUS vs FADA</a></li>
+                        <li><a class="dropdown-item text-center" href="./Jogos/7°Rodada/PEACE vs CAPIVARAS.html">PEACE vs CAPIVARAS</a></li>
+                        <li><a class="dropdown-item text-center" href="./Jogos/7°Rodada/EL JACK vs AGUIAS.html">EL JACK vs ÁGUIAS</a></li>
+                        <li><a class="dropdown-item text-center" href="./Jogos/7°Rodada/TITAS vs GRINGOS.html">TITÃS vs GRINGOS</a></li>
+                        <li><a class="dropdown-item text-center" href="./Jogos/7°Rodada/URSUS vs FADA.html">URSUS vs FADA</a></li>
                     </ul>
                 </div>
             </div>
